<resources>
    <string name="accepted_refund_message" translatable="false">Операция завершена успешно</string>
    <string name="address_title" translatable="false">Адрес</string>
    <string name="amount_is_incorrect_message" translatable="false">Введена некорректная сумма</string>
    <string name="amount_operation" translatable="false">%1$s ₽</string>
    <string name="amount_operation_title" translatable="false">Сумма операции</string>
    <string name="app_name" translatable="false">Mertech Куайринг</string>
    <string name="kuayring" translatable="false">Куайринг</string>
    <string name="one" translatable="false">%1$s</string>
    <string name="attention_title" translatable="false">Внимание!</string>
    <string name="auth" translatable="false">Авторизация</string>
    <string name="auth_error_message" translatable="false">Ошибка авторизации.\\nПроверьте логин и пароль.</string>
    <string name="brand_name_title" translatable="false">Наименование</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="change_btn_title" translatable="false">Изменить</string>
    <string name="change_pass_text" translatable="false">Изменить пароль</string>
    <string name="change_temp_pass_message" translatable="false">Вы запустили приложение в первый раз.\10Вероятно, у Вас установлен временный пароль.\10Рекомендуем сменить пароль, так как аккаунт может быть заблокирован через 7 дней.</string>
    <string name="check_refund_transfer_message" translatable="false">Проверяем возможность возврата</string>
    <string name="city_form_title" translatable="false">Город *</string>
    <string name="code_country_form" translatable="false">+7</string>
    <string name="comment_title_help_dialog" translatable="false"><font size="16">Комментарии</font></string>
    <string name="commission" translatable="false">%1$s ₽</string>
    <string name="commission_title" translatable="false">Комиссия</string>
    <string name="contact_person_form_title" translatable="false">Контактное лицо</string>
    <string name="contact_person_title_help_dialog" translatable="false"><font size="16">Адрес</font></string>
    <string name="contact_phone_number_title" translatable="false">Контактный тел.</string>
    <string name="current_pass_title" translatable="false">Текущий пароль</string>
    <string name="date_end_title" translatable="false">По</string>
    <string name="date_start_title" translatable="false">C</string>
    <string name="default_web_client_id">419397036225-utbs9i94r9f8k1899q4la6sk4bra0nmc.apps.googleusercontent.com</string>
    <string name="dialog_cancel_btn" translatable="false">Отмена</string>
    <string name="dialog_date_range_title" translatable="false">Выберете диапазон</string>
    <string name="dialog_empty_date_error_message" translatable="false">Заполните диапазон дат</string>
    <string name="dialog_end_date_error_message" translatable="false">Конечная дата не может предшествовать начальной</string>
    <string name="dialog_error_date_title" translatable="false">Дата не установлена</string>
    <string name="dialog_ok_btn" translatable="false">Ок</string>
    <string name="dialog_pin_btn" translatable="false">Ок</string>
    <string name="dialog_send_request_btn" translatable="false">Отправить запрос</string>
    <string name="dialog_start_date_error_message" translatable="false">Начальная дата не может превышать конечную</string>
    <string name="do_you_want_exit_dialog_message" translatable="false">Вы уверены, что хотите выйти из личного кабинета?\10\10Вы не сможете совершать продажи и просматривать список операций.</string>
    <string name="email_form_title" translatable="false">Email</string>
    <string name="empty_fields_error_help_dialog_message" translatable="false">Для отправки запроса необходимо заполнить все поля</string>
    <string name="empty_pref_error_message" translatable="false">Для начала работы небходимо авторизоваться в настройках приложения.</string>
    <string name="error" translatable="false">Ошибка</string>
    <string name="error_disable_lock_screen_message" translatable="false">Экран блокировки не был отключен.\10\10Введен неверный ПИН-код.</string>
    <string name="error_message" translatable="false">Код ошибки: %1$s\10Ошибка: %2$s</string>
    <string name="error_set_pin_code_message" translatable="false">ПИН-код не был установлен.\10\10ПИН-код должен состоять из цифр от 0 до 9.\10\10Введенные ПИН-коды должны совпадать.</string>
    <string name="error_title" translatable="false">Ошибка</string>
    <string name="exit_lk_dialog_title" translatable="false">Выход</string>
    <string name="firebase_database_url">https://sbp-android-1296d.firebaseio.com</string>
    <string name="form_wait_message" translatable="false">Создаем заявление на открытие р/с</string>
    <string name="gcm_defaultSenderId">419397036225</string>
    <string name="lbl_complete_payment_in_bank_app" formatted="true" translatable="false">Выберите банк\nдля подтверждения оплаты</string>
    <string name="lbl_no_bank_apps" formatted="true" translatable="false">Отсутствует банковское\nприложение</string>
    <string name="hint_completePayment_in_bank_app" formatted="true" translatable="false">Выбрав банк, Вы перейдете в мобильное\nприложение для завершения оплаты.</string>
    <string name="get_payment_status_message" translatable="false">Проверяем статус оплаты</string>
    <string name="get_payments_list_message" translatable="false">Получаем список операций</string>
    <string name="get_sbp" translatable="false">Подключиться к СБП</string>
    <string name="google_api_key">AIzaSyDYDFVpCFIdBQ_5o7RNedzfemTXTx7cJ4w</string>
    <string name="google_app_id">1:419397036225:android:6c34dfbae9a615e223cc40</string>
    <string name="google_crash_reporting_api_key">AIzaSyDYDFVpCFIdBQ_5o7RNedzfemTXTx7cJ4w</string>
    <string name="google_storage_bucket">sbp-android-1296d.appspot.com</string>
    <string name="hide_pass" translatable="false">********</string>
    <string name="i_have_login" translatable="false">У меня уже есть аккаунт</string>
    <string name="id_title" translatable="false">ID</string>
    <string name="incorrect_login_or_pass_message" translatable="false">Неверный логин или пароль.</string>
    <string name="inn" translatable="false">ИНН: %1$s</string>
    <string name="inn_form_title" translatable="false">ИНН *</string>
    <string name="key_city" translatable="false">ru.ascintegraciya.sbpskbandroid.city</string>
    <string name="key_email" translatable="false">ru.ascintegraciya.sbpskbandroid.email</string>
    <string name="key_inn" translatable="false">ru.ascintegraciya.sbpskbandroid.inn</string>
    <string name="key_last_name" translatable="false">ru.ascintegraciya.sbpskbandroid.last_name</string>
    <string name="key_name" translatable="false">ru.ascintegraciya.sbpskbandroid.name</string>
    <string name="key_ogrn" translatable="false">ru.ascintegraciya.sbpskbandroid.ogrn</string>
    <string name="key_org_name" translatable="false">ru.ascintegraciya.sbpskbandroid.org_name</string>
    <string name="key_phone" translatable="false">ru.ascintegraciya.sbpskbandroid.phone</string>
    <string name="key_pref_firebase_token" translatable="false">ru.ascintegraciya.sbpskbandroid.pref_firebase_token</string>
    <string name="key_pref_is_first_launch" translatable="false">ru.ascintegraciya.sbpskbandroid.pref_is_first_launch</string>
    <string name="key_pref_is_first_payment" translatable="false">ru.ascintegraciya.sbpskbandroid.pref_is_first_payment</string>
    <string name="key_pref_login" translatable="false">ru.ascintegraciya.sbpskbandroid.pref_login</string>
    <string name="key_pref_merchant_id" translatable="false">ru.ascintegraciya.sbpskbandroid.pref_merchant_id</string>
    <string name="key_pref_pass" translatable="false">ru.ascintegraciya.sbpskbandroid.pref_pass</string>
    <string name="key_pref_pin_code" translatable="false">ru.ascintegraciya.sbpskbandroid.pin_code</string>
    <string name="last_name_form_title" translatable="false">Фамилия *</string>
    <string name="lk_title" translatable="false">Личный кабинет</string>
    <string name="lock_screen_title" translatable="false">Экран блокировки</string>
    <string name="log_off_btn" translatable="false">Выйти</string>
    <string name="login_btn_text" translatable="false">Войти</string>
    <string name="login_hint" translatable="false">Логин</string>
    <string name="login_title" translatable="false">Логин</string>
    <string name="mcc_title" translatable="false">Код MCC</string>
    <string name="merchant_address" translatable="false">%1$s, %2$s, %3$s</string>
    <string name="month_radio_title" translatable="false">Текущий месяц</string>
    <string name="name_form_title" translatable="false">Имя *</string>
    <string name="name_ogr_form_title" translatable="false">Наименование организации*</string>
    <string name="name_taxpayer_title" translatable="false">Юр. лицо / ИП</string>
    <string name="new_pass_again_title" translatable="false">Новый пароль ещё раз</string>
    <string name="new_pass_title" translatable="false">Новый пароль</string>
    <string name="show_qr_btn_text" translatable="false">Показать на экране \n телефона</string>
    <string name="new_pin_code_again_title" translatable="false">Новый ПИН-код ещё раз</string>
    <string name="new_pin_code_title" translatable="false">Новый ПИН-код</string>
    <string name="ogrn" translatable="false">ОГРН: %1$s</string>
    <string name="ogrn_form_title" translatable="false">ОГРН *</string>
    <string name="ok" translatable="false">Ок</string>
    <string name="open_payment_account_btn_text" translatable="false">Открыть расчетный счет</string>
    <string name="qr_code_text" translatable="false">Ваш QR-код сформирован и выведен \n на экран подключенного QR-дисплея</string>
    <string name="wait_for_qr" translatable="false">QR-код будет выведен \n на экран телефона через \n\n %1$d сек</string>
    <string name="get_qr_fast" translatable="false">Получить быстрее?</string>
    <string name="operation_date_title" translatable="false">Дата операции</string>
    <string name="operation_id_title" translatable="false">Идентификатор операции</string>
    <string name="operation_title" translatable="false">Операция</string>
    <string name="operations_list_error_message" translatable="false">Код ошибки: %1$s\10Ошибка: %2$s</string>
    <string name="org_form_title" translatable="false">Организация</string>
    <string name="pas_hint" translatable="false">Пароль</string>
    <string name="pas_title" translatable="false">Пароль</string>
    <string name="password_not_equals_error_message" translatable="false">Введенные пароли не совпадают. Повторите ввод пароля и его подтверждения.</string>
    <string name="payment_account_form_title" translatable="false">Анкета</string>
    <string name="phone_form_title" translatable="false">Телефон *</string>
    <string name="promo_code_form_title" translatable="false">Промокод</string>
    <string name="refund_btn" translatable="false">Провести возврат</string>
    <string name="select_city_message" translatable="false">Если Вы не нашли свой город в списке, выберите ближайший к Вам населенный пункт из списка.</string>
    <string name="select_range_radio_title" translatable="false">Указать диапазон</string>
    <string name="status_title" translatable="false">Статус</string>
    <string name="type_title" translatable="false">Тип</string>
    <string name="user_agreement_check_box_text" translatable="false">Нажимая кнопку «открыть расчетный счет», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных</string>
    <string name="week_radio_title" translatable="false">Текущая неделя</string>
</resources>